added host and service output
