# python-flask/swagger_server/controllers/hosts_controller.py
@@ -137,6 +137,9 @@ def hosts_update(name, body=None):  # noqa: E501
     if body.state:
         HOSTS[name].state = body.state
 
+    if body.output:
+        HOSTS[name].output = body.output
+
     hosts_notify(name)
     return make_response(
         "{name} successfully updated".format(name=name), 201
